--- a/package.json
+++ b/package.json
@@ -4,39 +4,30 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.2",
-    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "expo": "~49.0.15",
+    "expo-av": "~13.4.1",
+    "expo-build-properties": "~0.8.3",
+    "expo-dev-client": "~2.4.13",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-duration-picker": "^1.1.1",
     "react-native": "^0.72.10",
-    "react-native-drag-sort": "^2.4.4",
-    "react-native-draggable-flatlist": "^4.0.1",
-    "react-native-drawer": "^2.5.1",
-    "react-native-drax": "^0.10.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-google-mobile-ads": "^13.0.2",
     "react-native-modal": "^13.0.1",
-    "react-native-multicolumn-modal-picker": "^1.0.9",
     "react-native-popover-view": "^5.1.8",
     "react-native-reanimated": "~3.3.0",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-side-drawer": "^2.1.0",
-    "react-native-simple-picker": "^3.1.4",
-    "react-native-sortable-list": "^0.0.25",
-    "react-native-swipe-list-view": "^3.2.9",
-    "react-native-swipeable-list": "^0.1.2",
-    "react-native-timer-picker": "^1.5.1",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-wheely": "^0.6.0"
+    "react-native-wheely": "^0.6.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
